prometheus_data/alertmanager.yaml
# Deployment для Alertmanager
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:v0.23.0
        args:
          - "--config.file=/etc/alertmanager/alertmanager.yml"
        ports:
          - containerPort: 9093
        volumeMounts:
          - name: config-volume
            mountPath: /etc/alertmanager
      volumes:
        - name: config-volume
          configMap:
            name: alertmanager-config
---
# Service для Alertmanager
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
spec:
  type: ClusterIP
  selector:
    app: alertmanager
  ports:
    - name: alertmanager
      port: 9093
      targetPort: 9093
